--- a/support.html
+++ b/support.html
@@ -8,6 +8,10 @@
       height: 100%;
     }
 
+    * {
+      font-family: 'Source Sans Pro', sans-serif;
+    }
+    
     .vg-on_mark-tooltip {
       visibility: hidden;
       padding: 8px;
